applications/media-experimental/base/libation/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: libation
  labels:
    app: libation
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 6080
      targetPort: http
      protocol: TCP
  selector:
    app: libation
