applications/media-experimental/base/libation/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: libation
  labels:
    app: libation
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/instance: "main"
    gethomepage.dev/name: "Libation"
    gethomepage.dev/description: "Audible Downloader / de-DRM"
    gethomepage.dev/group: "Audiobooks"
    gethomepage.dev/weight: "14"
    gethomepage.dev/icon: "audible.png"
    gethomepage.dev/href: "http://libation.${CLUSTER_DOMAIN}"
    gethomepage.dev/siteMonitor: "http://libation.media-experimental.svc.cluster.local:6080"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`libation.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: libation
          port: 6080
